--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,65 +1,121 @@
-body {
-    overflow: hidden;
-    background: black;
-    cursor: auto; /* Hide default cursor */
+body{
+    background-color: rgb(0, 0, 0);
+   overflow: hidden;
 }
-
-.fluid-trail {
-    position: absolute;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
-    border-radius: 50%;
-    pointer-events: none;
-    animation: fluidFade 2.5s ease-out forwards;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.1), 0 0 40px rgba(255, 255, 255, 0.05);
-    mix-blend-mode: overlay;
-}
-
-@keyframes fluidFade {
-    0% {
-        transform: scale(0);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(2.5);
-        opacity: 0;
-    }
-}
-
-.top-box {
-    display: flex;
-    background-color: #a7a69e;
-    width: 100%;
-    height: 10vh;
-    border-radius: 10px ;
-
-}
-.mid{
+.whole{
     display: grid;
-    grid-template-columns: repeat(10,1fr);
-    grid-template-rows: repeat(6,100px);
-    margin-top: 1%;
-    column-gap: 1%;
-    row-gap: 1.8%;
- }
-.qoute-box{
+    height: 97.9vh;
+    grid-template-columns:1.2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+    grid-template-areas: 
+    " navt navt navt navt navt navt navt"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "content3 content3 content4 content4 content4 content2 content2"
+    "content3 content3 content4 content4 content4 footer footer"
+    ;
+    grid-gap: 11px;
+}
+.navt{
+    background: #a7a69e;
+    grid-area:navt;
+    justify-content: space-between;
     display: flex;
-    background-color: #a7a69e;
+   border-radius: 10px;
+   width: auto;
+   height: 70px;
+
+}
+
+.afeef {
+    display: flex;
     border-radius: 10px;
-    grid-row-start: 1;
-    grid-row-end: 5;
-    grid-column-start: 1 ;
-    grid-column-end: 5;
-    flex-direction: column;
+    margin-left: 2%;
+    width: auto;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.2rem;
+}
+.move{
+    display: flex;
+    border-radius: 10px;
+    width: 200px;
+    margin-left: -111px;
+    opacity: 0;
+    height: 9.7vh;
+    justify-content: center;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.2rem;
+
+}   
+    .move:hover{
+        animation: slide 1s ease-in-out 0s forwards ;
+        
+    }
+    @keyframes slide {
+        from{
+            opacity: 0;
+            margin-left: -111px;
+        }
+        to{
+            opacity: 1;
+            margin-left: -120px;
+        }
+    }
+.three{
+    display: flex;
+    justify-content: flex-end;
+    width: 400px;
+    align-items: center;
+    justify-content: space-around;
+} 
+.projects{
+    display: flex;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.projects:hover{
+    cursor: pointer;
+}
+.about{
+    display: flex;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    text-decoration:none;
+}
+.about:hover{
+    cursor: pointer;}
+
+.cnt{
+    display: flex;
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cnt:hover{
+    cursor: pointer;
+}
+main{
+    background: #a7a69e;
+    grid-area:main;
+    border-radius: 10px;
+
 }
 .flwr-pht{
     display: flex; 
     justify-content: end;
-    margin-top: 3%;
-    margin-right: 3%;
+   margin-top: 2%;
+   margin-right: 2%;
     margin-left: auto;
-    width: auto;
+    width: 120px;
     height:auto;
-    /* border-radius: 40px; */
 }
 .flwr-pht{
     animation:rotate 8s linear 0s infinite;
@@ -72,7 +128,7 @@ body {
       transform: rotate(360deg);
     }
   }
-.txt1 {
+  .txt1 {
     display: flex;
     justify-content: left;
     margin-top: 3%;
@@ -81,25 +137,19 @@ body {
     width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
 }
-.potrait{
-    background-color: #a7a69e;
+
+#content1{
+    background: #a7a69e;
+    grid-area:content1;
     border-radius: 10px;
-    grid-row-start:1 ;
-    grid-row-end: 5;
-    grid-column-start: 5 ;
-    grid-column-end: 8;
-}
-.cert{
-    display: flex;
-    background-color: #a7a69e;
-    border-radius: 10px;
-    grid-row-start:1 ;
-    grid-row-end: 6;
-    grid-column-start: 8;
-    grid-column-end: 11;
-    color: inherit;
-    text-decoration: none;
     overflow: hidden;
+
+}
+#content2{
+    background:#a7a69e;
+    grid-area:content2;
+    border-radius: 10px;
+    
 }
 .topc{
     display: flex;
@@ -132,30 +182,37 @@ body {
 }
 .imgc{
     margin-top: 2.5%;
-    
 }
 #imagecertificate{
-   width: 95%;
-    /* justify-content: center; */
-   height: auto ;
-   margin-top: 5%;
-   margin-left: 2.5%;
-  border-radius: 20px;
-}
-.allc{
-    margin-top :2.4cqmax;
+    width: 95%;
+     /* justify-content: center; */
+    height: auto ;
+    margin-top: 5%;
+    margin-left: 2.5%;
+    border-radius: 20px;
    
-    color: #171716;
-    text-decoration: none;
-    
+ }
+ #pot{ 
+    width: 100%; /* Make the image width 100% of its parent */
+    height: 100%; /* Make the image height 100% of its parent */
+    object-fit: cover; /* Make the image cover the entire parent area */
+    border-radius: 10px;
+        object-position: 0% 13%;
+}
+ .allc{
+    position:relative;
+    margin-top: 30px;
+    width: auto;
+    height:auto;
+    border-radius: 10px;
 }
 .g1{
     display: flex;
-    border: 2px solid rgb(39, 39, 39);
-    margin-bottom: 4.5%;
-    margin-left: 1.3vw;
-    width:26vw;
-}
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    border-radius: 10px;
+    }
 .google{
     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
@@ -163,6 +220,7 @@ body {
     height:auto;
     font-size: 1.7rem;
     margin-left: 3%;
+    margin-top: 6%;
     text-decoration: none;
 }
 .google:hover{
@@ -170,11 +228,12 @@ body {
 }
 .g2{
     display: flex;
-    border: 2px solid rgb(39, 39, 39);
-    margin-left: 1.3vw;
-    width:26vw;
-    margin-top: 4.5%;
-    margin-bottom: 4.5%;
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    margin-top: 6%;
+
+    border-radius: 10px;
 }
 .hackr{
     display: flex;
@@ -182,39 +241,81 @@ body {
     width: auto;
     height:auto;
     font-size: 1.7rem;
-    /* margin-top:10%; */
+    /* margin-top:10%; */   
     margin-left: 3%;
+    margin-top: 6%;
+
 }
 .hackr:hover{
     cursor: pointer;
 }
 .g3{
     display: flex;
-    border: 2px solid rgb(39, 39, 39);
-    margin-left: 1.3vw;
-    width:26vw;
-    margin-top: 4.5%;
-    margin-bottom: 4.5%; 
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    border-radius: 10px;
+    margin-top: 6%;
+
 }
 .more{
-    display: flex;
+     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
     width: auto;
     height:auto;
     font-size: 1.7rem;
+    margin-top: 6%;
+    margin-bottom: 6%;
+
     margin-left: 3%;
 }
 .more:hover{
     cursor: pointer;
 }
-.self{
+#content3{
+    background: rgb(17, 0, 255);
+    grid-area:content3 ;
+    border-radius: 10px;
+    display: flexbox;
     background-color: #a7a69e;
     border-radius: 10px;
-    grid-row-start:5 ;
-    grid-row-end: 7;
-    grid-column-start: 4;
-    grid-column-end: 8;
+}
+.explain{
+    width: 300px;
+}
+.tops{
+    display: flex;
+   
+}
+#star{
+   margin-top: 0%;
+   border-radius: 10px;
+   width: 2.2rem;
+   height: auto;
+   font-size: 2.9rem;
+   margin-left: 2.5%;
+   margin-top: 0%; 
+ 
+
+
+        animation:rotate1 8s linear 0s infinite;
+    }
+    @keyframes rotate1 {
+        from{
+        transform: rotate(0deg);
+        }
+        to{
+        transform: rotate(360deg);
+        }
+    }
+#content4{
+    background: rgb(17, 0, 255);
+    grid-area:content4 ;
+    border-radius: 10px;
+    background-color: #a7a69e;
+    border-radius: 10px;
     position:relative;
+
 }
 .txt2{
     display: flex;
@@ -243,36 +344,24 @@ body {
 .cnt-me{
     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    margin-top: 15% ;
+    margin-top:14% ;
     margin-left: 5%;
     border-radius: 10px;
     width: auto;
     height:auto;
     font-size: 4rem;
 }
-.contact {
-    display: grid;
+footer{
+    grid-area:footer;
+    border-radius: 10px;
     background-color: #a7a69e;
     border-radius: 10px;
-    grid-row-start: 6;
-    grid-row-end: 7;
-    grid-column-start: 8;
-    grid-column-end: 11;
-    grid-template-columns: repeat(3, 1fr); /* Add this line */
-    gap: 1%; /* Add this line */
-    justify-content: center;
-    align-items: center;
-
-}
-
-.int{
-    
-    margin-top: auto;
-    margin-right:auto;
-    margin-left: auto;
     display: flex;
+    justify-content:space-around;
     align-items: center;
-    justify-content: center;
+}
+.int{
+    display: flex;
     height: auto;
     width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
@@ -284,16 +373,11 @@ body {
     cursor: pointer;
 }
 .git{
-    margin-top: auto;
-    margin-right:auto;
-    margin-left: auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: auto;
     width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.1rem;
+    font-size: 1.1rem;  
     color: inherit;
     text-decoration: none;
 }
@@ -301,149 +385,216 @@ body {
     cursor: pointer;
 }
 .lind{
-    margin-top: auto;
-    margin-right:auto;
-    margin-left: auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: auto;
     width: auto;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.1rem;
+    font-size: 1.1rem;  
     color: inherit;
     text-decoration: none;
 }
-/* #int-logo{
-    display: flex;
-    width:50px;
-    border: aqua solid 2px;
-} */
 .lind:hover{
     cursor: pointer;
 }
-.afeef {
-    display: flex;
-    border-radius: 10px;
-    margin-left: 2%;
-    width: auto;
-    height: 9.7vh;
-    justify-content: center;
-    align-items: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.2rem;
-}
-.move{
-    display: flex;
-    border-radius: 10px;
-    width: 200px;
-    margin-left: -111px;
-    opacity: 0;
-    height: 9.7vh;
-    justify-content: center;
-    align-items: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    font-size: 1.2rem;
 
-}  
-.move:hover{
-    animation: slide 1s ease-in-out 0s forwards ;
-    
-}
-@keyframes slide {
-    from{
-        opacity: 0;
-        margin-left: -111px;
+
+
+@media only screen and (max-width:1080px) {
+    body{
+        overflow: auto;
     }
-    to{
-        opacity: 1;
-        margin-left: -73px;
+    .whole{
+        grid-template-columns: 1fr;
+        grid-template-rows:auto 350px 1200px 1.2fr 1.2fr 1.2fr 90px;
+        grid-template-areas: 
+    "navt"
+    "main"
+    "content1"
+    "content2"
+    "content3"
+    "content4"
+    "footer"
+    ;
+    grid-gap: 15px;
     }
-}
-.three{
-    display: grid;
-    width: auto;
-    grid-template-columns: repeat(3,1fr);
-    column-gap: 30px;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: 2%;
-}
-.projects{
-    display: flex;
-    width: auto;
-    align-self: center;
-    justify-content: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-.projects:hover{
-    cursor: pointer;
-}
-.about{
-    display: flex;
-    width: auto;
-    align-self: center;
-    justify-content: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
-    text-decoration:none;
-}
-.about:hover{
-    cursor: pointer;
-}
-.cnt{
-    display: flex;
-    width: auto;
-    align-self: center;
-    justify-content: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.cnt:hover{
-    cursor: pointer;
-}
-.abt-me{
-    display: flexbox;
-    background-color: #a7a69e;
-    border-radius: 10px;
-    grid-row-start:5 ;
-    grid-row-end: 7;
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-.explain{
-    width: 300px;
-}
-.tops{
-    display: flex;
-   
-   
-}
-#star{
-   margin-top: 0%;
-   border-radius: 10px;
-   width: 2.2rem;
-   height: auto;
-   font-size: 2.9rem;
-   margin-left: 2.5%;
-   margin-top: 0%; 
- 
-
-
-        animation:rotate1 8s linear 0s infinite;
+    .topc{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        color: inherit;
+        text-decoration: none;
+        font-size:3rem;
+        margin-top: 4%;
+        margin-left: 4%;
+        color: black;
+        text-decoration: none;
     }
-    @keyframes rotate1 {
-        from{
-        transform: rotate(0deg);
+    #arrw{
+        display: flex; 
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        margin-right: 5%;
+        margin-left: auto;
+        color: black;
+        text-decoration: none;
+    }
+    #arrw:hover{
+        cursor: pointer;
+    }
+
+    #imagecertificate{
+        width: 95%;
+         /* justify-content: center; */
+        height: auto ;
+        margin-top: 2%;
+        margin-left: 2.5%;
+        border-radius: 20px;
+       
+     }
+    .allc{
+        margin-top: 50px;
+        width: auto;
+        height:auto;
+        border-radius: 10px;
+    }
+    .g1{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
         }
-        to{
-        transform: rotate(360deg);
-        }
+    .google{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        margin-left: 3%;
+        margin-top: 6%;
+        text-decoration: none;
     }
-.explain{
-    display: flex;
-    justify-content: end;
-    font-size: 1.2rem;
-    border: 1px solid aqua;
+    .google:hover{
+        cursor: pointer;
+    }
+    .g2{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
+        margin-top: 6%;
+    }
+    .hackr{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        /* margin-top:10%; */   
+        margin-left: 3%;
+        margin-top: 6%;
     
+    }
+    .hackr:hover{
+        cursor: pointer;
+    }
+    .g3{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
+        margin-top: 6%;
+    
+    }
+    .more{
+         display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        margin-top: 6%;
+        margin-bottom: 6%;
+    
+        margin-left: 3%;
+    }
+    .more:hover{
+        cursor: pointer;
+    }
+    .txt2{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 2rem;
+        margin-top: 3.7%;
+        margin-left: 3.5%;
+    }
+    #str{
+        display: flex; 
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 2rem;
+        margin-top: -1.2%;
+        margin-bottom: 0%;
+        margin-right: 3.4%;
+        margin-left: auto;
+    }
+    #str:hover{
+        cursor: pointer;
+    }
+    .cnt-me{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+        margin-top:14% ;
+        margin-left: 3%;
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 5rem;
+    }
+    .int{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .int:hover{
+        cursor: pointer;
+    }
+    .git{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .git:hover{
+        cursor: pointer;
+    }
+    .lind{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .lind:hover{
+        cursor: pointer;
+    }
 }
