--- a/tempc.css
+++ b/tempc.css
@@ -1,54 +1,58 @@
 body{
-    background-color: rgb(102, 101, 101);
-    margin: 1%;
+    background-color: rgb(0, 0, 0);
+   overflow: hidden;
 }
 .whole{
     display: grid;
-    height: 100vh;
-    grid-template-columns:repeat(3,1fr) ;
-    grid-template-rows: 0.5fr 2fr 2fr 2fr ;
+    height: 97.9vh;
+    grid-template-columns:1.2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
     grid-template-areas: 
-    " nav nav nav"
-    "main main main"
-    "content1 content2 content3"
-    "footer footer footer "
+    " navt navt navt navt navt navt navt"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "main main main content1 content1 content2 content2"
+    "content3 content3 content4 content4 content4 content2 content2"
+    "content3 content3 content4 content4 content4 footer footer"
     ;
-    grid-gap: 1rem;
+    grid-gap: 11px;
 }
 .navt{
-    background: aqua;
-    grid-area:nav;
+    background: #a7a69e;
+    grid-area:navt;
+    justify-content: space-between;
     display: flex;
-    justify-content:space-between;
    border-radius: 10px;
    width: auto;
-   height: 60px;
+   height: 70px;
 
 }
 
 .afeef {
-    display: flex;  
+    display: flex;
     border-radius: 10px;
     margin-left: 2%;
-    width: 10vw;
+    width: auto;
     height: auto;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
     font-size: 1.2rem;
 }
-    .move{
-        display: flex;
-        justify-content: flex-start;
-        align-items: center ;
-        border-radius: 10px;
-        width: 200px;
-        opacity: 0;
-        height: 9.7vh;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-        font-size: 1.2rem;
-        margin-left: -800px;
-    }  
+.move{
+    display: flex;
+    border-radius: 10px;
+    width: 200px;
+    margin-left: -111px;
+    opacity: 0;
+    height: 9.7vh;
+    justify-content: center;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.2rem;
+
+}   
     .move:hover{
         animation: slide 1s ease-in-out 0s forwards ;
         
@@ -56,11 +60,11 @@ body{
     @keyframes slide {
         from{
             opacity: 0;
-            margin-left: -800px;
+            margin-left: -111px;
         }
         to{
             opacity: 1;
-            margin-left: -719px;
+            margin-left: -120px;
         }
     }
 .three{
@@ -68,7 +72,7 @@ body{
     justify-content: flex-end;
     width: 400px;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 } 
 .projects{
     display: flex;
@@ -89,50 +93,508 @@ body{
     cursor: pointer;}
 
 .cnt{
-        display: flex;
-        width: auto;
-        align-self: center;
-        justify-content: center;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    .cnt:hover{
-        cursor: pointer;
-    }
-
-main{
-    background: rebeccapurple;
-    grid-area:main;
+    display: flex;
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.cnt:hover{
+    cursor: pointer;
+}
+main{
+    background: #a7a69e;
+    grid-area:main;
+    border-radius: 10px;
+
+}
+.flwr-pht{
+    display: flex; 
+    justify-content: end;
+   margin-top: 2%;
+   margin-right: 2%;
+    margin-left: auto;
+    width: 120px;
+    height:auto;
+}
+.flwr-pht{
+    animation:rotate 8s linear 0s infinite;
+  }
+  @keyframes rotate {
+    from{
+      transform: rotate(0deg);
+    }
+    to{
+      transform: rotate(360deg);
+    }
+  }
+  .txt1 {
+    display: flex;
+    justify-content: left;
+    margin-top: 3%;
+    margin-left:3%;
+    font-size:3rem;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+}
+
 #content1{
-    background: palegreen;
+    background: #a7a69e;
     grid-area:content1;
+    border-radius: 10px;
+    overflow: hidden;
+
 }
 #content2{
-    background: rgb(255, 0, 195);
+    background:#a7a69e;
     grid-area:content2;
+    border-radius: 10px;
+    
+}
+.topc{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    color: inherit;
+    text-decoration: none;
+    font-size: 1.7rem;
+    margin-top: 4%;
+    margin-left: 4%;
+    color: black;
+    text-decoration: none;
+}
+#arrw{
+    display: flex; 
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-right: 5%;
+    margin-left: auto;
+    color: black;
+    text-decoration: none;
+}
+#arrw:hover{
+    cursor: pointer;
+}
+.imgc{
+    margin-top: 2.5%;
+}
+#imagecertificate{
+    width: 95%;
+     /* justify-content: center; */
+    height: auto ;
+    margin-top: 5%;
+    margin-left: 2.5%;
+    border-radius: 20px;
+   
+ }
+ #pot{ 
+    width: 100%; /* Make the image width 100% of its parent */
+    height: 100%; /* Make the image height 100% of its parent */
+    object-fit: cover; /* Make the image cover the entire parent area */
+    border-radius: 10px;
+        object-position: 0% 13%;
+}
+ .allc{
+    position:relative;
+    margin-top: 30px;
+    width: auto;
+    height:auto;
+    border-radius: 10px;
+}
+.g1{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    border-radius: 10px;
+    }
+.google{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    margin-left: 3%;
+    margin-top: 6%;
+    text-decoration: none;
+}
+.google:hover{
+    cursor: pointer;
+}
+.g2{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    margin-top: 6%;
+
+    border-radius: 10px;
+}
+.hackr{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    /* margin-top:10%; */   
+    margin-left: 3%;
+    margin-top: 6%;
+
+}
+.hackr:hover{
+    cursor: pointer;
+}
+.g3{
+    display: flex;
+    border: 2px solid rgb(39, 39, 39);  
+    width: 24vw;
+    margin-left: 5%;
+    border-radius: 10px;
+    margin-top: 6%;
+
+}
+.more{
+     display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    width: auto;
+    height:auto;
+    font-size: 1.7rem;
+    margin-top: 6%;
+    margin-bottom: 6%;
+
+    margin-left: 3%;
+}
+.more:hover{
+    cursor: pointer;
 }
 #content3{
     background: rgb(17, 0, 255);
     grid-area:content3 ;
+    border-radius: 10px;
+    display: flexbox;
+    background-color: #a7a69e;
+    border-radius: 10px;
+}
+.explain{
+    width: 300px;
+}
+.tops{
+    display: flex;
+   
+}
+#star{
+   margin-top: 0%;
+   border-radius: 10px;
+   width: 2.2rem;
+   height: auto;
+   font-size: 2.9rem;
+   margin-left: 2.5%;
+   margin-top: 0%; 
+ 
+
+
+        animation:rotate1 8s linear 0s infinite;
+    }
+    @keyframes rotate1 {
+        from{
+        transform: rotate(0deg);
+        }
+        to{
+        transform: rotate(360deg);
+        }
+    }
+#content4{
+    background: rgb(17, 0, 255);
+    grid-area:content4 ;
+    border-radius: 10px;
+    background-color: #a7a69e;
+    border-radius: 10px;
+    position:relative;
+
+}
+.txt2{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 1.2rem;
+    margin-top: 3.7%;
+    margin-left: 3.5%;
+}
+#str{
+    display: flex; 
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 2rem;
+    margin-top: -1.2%;
+    margin-bottom: 0%;
+    margin-right: 3.4%;
+    margin-left: auto;
+}
+#str:hover{
+    cursor: pointer;
+}
+.cnt-me{
+    display: flex;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    margin-top:14% ;
+    margin-left: 5%;
+    border-radius: 10px;
+    width: auto;
+    height:auto;
+    font-size: 4rem;
 }
 footer{
-    background: rgb(221, 255, 0);
     grid-area:footer;
+    border-radius: 10px;
+    background-color: #a7a69e;
+    border-radius: 10px;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
 }
+.int{
+    display: flex;
+    height: auto;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;  
+    color: inherit;
+    text-decoration: none;
+}
+.int:hover{
+    cursor: pointer;
+}
+.git{
+    display: flex;
+    height: auto;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;  
+    color: inherit;
+    text-decoration: none;
+}
+.git:hover{
+    cursor: pointer;
+}
+.lind{
+    display: flex;
+    height: auto;
+    width: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size: 1.1rem;  
+    color: inherit;
+    text-decoration: none;
+}
+.lind:hover{
+    cursor: pointer;
+}
+
+
+
 @media only screen and (max-width:1080px) {
+    body{
+        overflow: auto;
+    }
     .whole{
         grid-template-columns: 1fr;
-        grid-template-rows:  0.4fr 1.2fr 1.2fr 1.2fr 1.2fr;
+        grid-template-rows:auto 350px 1200px 1.2fr 1.2fr 1.2fr 90px;
         grid-template-areas: 
-    "nav"
+    "navt"
     "main"
     "content1"
     "content2"
     "content3"
+    "content4"
     "footer"
     ;
+    grid-gap: 15px;
     }
-    .nav{
-        width: 20px;
+    .topc{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        color: inherit;
+        text-decoration: none;
+        font-size:3rem;
+        margin-top: 4%;
+        margin-left: 4%;
+        color: black;
+        text-decoration: none;
+    }
+    #arrw{
+        display: flex; 
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        margin-right: 5%;
+        margin-left: auto;
+        color: black;
+        text-decoration: none;
+    }
+    #arrw:hover{
+        cursor: pointer;
+    }
+
+    #imagecertificate{
+        width: 95%;
+         /* justify-content: center; */
+        height: auto ;
+        margin-top: 2%;
+        margin-left: 2.5%;
+        border-radius: 20px;
+       
+     }
+    .allc{
+        margin-top: 50px;
+        width: auto;
+        height:auto;
+        border-radius: 10px;
+    }
+    .g1{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
+        }
+    .google{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        margin-left: 3%;
+        margin-top: 6%;
+        text-decoration: none;
+    }
+    .google:hover{
+        cursor: pointer;
+    }
+    .g2{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
+        margin-top: 6%;
+    }
+    .hackr{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        /* margin-top:10%; */   
+        margin-left: 3%;
+        margin-top: 6%;
+    
+    }
+    .hackr:hover{
+        cursor: pointer;
+    }
+    .g3{
+        display: flex;
+        border: 2px solid rgb(39, 39, 39);  
+        width: 90vw;
+        margin-left: 3.5%;
+        border-radius: 10px;
+        margin-top: 6%;
+    
+    }
+    .more{
+         display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        width: auto;
+        height:auto;
+        font-size: 2.5rem;
+        margin-top: 6%;
+        margin-bottom: 6%;
+    
+        margin-left: 3%;
+    }
+    .more:hover{
+        cursor: pointer;
+    }
+    .txt2{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 2rem;
+        margin-top: 3.7%;
+        margin-left: 3.5%;
+    }
+    #str{
+        display: flex; 
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 2rem;
+        margin-top: -1.2%;
+        margin-bottom: 0%;
+        margin-right: 3.4%;
+        margin-left: auto;
+    }
+    #str:hover{
+        cursor: pointer;
+    }
+    .cnt-me{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+        margin-top:14% ;
+        margin-left: 3%;
+        border-radius: 10px;
+        width: auto;
+        height:auto;
+        font-size: 5rem;
+    }
+    .int{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .int:hover{
+        cursor: pointer;
+    }
+    .git{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .git:hover{
+        cursor: pointer;
+    }
+    .lind{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 2rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .lind:hover{
+        cursor: pointer;
     }
 }
